--- a/webapp/public/index.css
+++ b/webapp/public/index.css
@@ -140,3 +140,30 @@ button.active {
 .yasqe .CodeMirror {
     font-size: 20px !important;
 }
+
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-flex;
+    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+  }
+  
+  /* Tooltip text */
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    background-color: gray;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    min-width: 300px;
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 3;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
