--- a/webapp/public/index.css
+++ b/webapp/public/index.css
@@ -138,7 +138,11 @@ button.active {
 }
 
 .yasqe .CodeMirror {
-    font-size: 20px !important;
+    font-size: 18px !important;
+}
+
+.yasr {
+    font-size: 18px
 }
 
 /* Tooltip container */
@@ -146,9 +150,27 @@ button.active {
     position: relative;
     display: inline-flex;
     border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
-  }
-  
-/* Tooltip text */
+}
+
+.tooltip-graph {
+    position: relative;
+    display: inline-flex;
+}
+
+.tooltip-graph .tooltiptext {
+    visibility: hidden;
+    background-color: gray;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 3;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+    /* Tooltip text */
 .tooltip .tooltiptext {
     visibility: hidden;
     background-color: gray;
@@ -165,5 +187,9 @@ button.active {
   
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
+.tooltip-graph:hover .tooltiptext {
     visibility: visible;
 }
